--- a/src/Panama/Resources/Dictionary/ListBox.xaml
+++ b/src/Panama/Resources/Dictionary/ListBox.xaml
@@ -1,11 +1,15 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:tk="http://schemas.restless.toolkit.com/2021"
+    xmlns:tools="clr-namespace:Restless.Panama.Tools">
 
     <Style x:Key="DefaultListBoxStyle" TargetType="ListBox" BasedOn="{StaticResource DefaultControlStyle}">
         <Setter Property="Background" Value="{StaticResource DefaultBackgroundBrush}"/>
         <Setter Property="BorderBrush" Value="{StaticResource DefaultBorderBrush}"/>
         <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Hidden"/>
+        
         <Setter Property="ItemContainerStyle">
             <Setter.Value>
                 <Style TargetType="ListBoxItem">
@@ -27,5 +31,22 @@
     </Style>
 
     <Style TargetType="ListBox" BasedOn="{StaticResource DefaultListBoxStyle}"/>
+
+    <Style x:Key="FileScanItemListBoxStyle" TargetType="ListBox" BasedOn="{StaticResource DefaultListBoxStyle}">
+        <Setter Property="Margin" Value="{StaticResource DataEntryPanelDefaultControlMargin}"/>
+        <Setter Property="ItemTemplate">
+            <Setter.Value>
+                <DataTemplate DataType="{x:Type tools:FileScanItem}">
+                    <Grid tk:Property.ColumnWidths="30,*">
+                        <TextBlock
+                            Foreground="{StaticResource DarkAlertForegroundBrush}"
+                            Text="{Binding VersionRevision}"/>
+                        
+                        <TextBlock Grid.Column="1" Text="{Binding File}"/>
+                    </Grid>
+                </DataTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
 </ResourceDictionary>
