--- a/src/Panama/Resources/Dictionary/Panel.xaml
+++ b/src/Panama/Resources/Dictionary/Panel.xaml
@@ -5,12 +5,12 @@
     xmlns:con="clr-namespace:Restless.Panama.Controls;assembly=Panama.Controls"
     xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
-    <sys:Double x:Key="DataEntryPanelDefaultControlHeight">26</sys:Double>
+    <!--<sys:Double x:Key="DataEntryPanelDefaultControlHeight">26</sys:Double>
     <Thickness x:Key="DataEntryPanelDefaultControlMargin">0,0,6,4</Thickness>
     <Thickness x:Key="DataEntryPanelAltControlMargin">0,4,6,4</Thickness>
 
     <Thickness x:Key="DataEntryPanelDefaultTextBlockMargin">0,8,0,2</Thickness>
-    <Thickness x:Key="DataEntryPanelAltTextBlockMargin">0,1,0,0</Thickness>
+    <Thickness x:Key="DataEntryPanelAltTextBlockMargin">0,1,0,0</Thickness>-->
 
     <Style x:Key="DataEntryPanelDefaultTextBlockStyle" TargetType="TextBlock">
         <Setter Property="Margin" Value="{StaticResource DataEntryPanelDefaultTextBlockMargin}"/>
@@ -59,10 +59,11 @@
     </Style>
 
     <Style x:Key="DefaultStatusBarStyle" TargetType="StatusBar" BasedOn="{StaticResource DefaultControlStyle}">
-        <Setter Property="Padding" Value="3,2"/>
+        <Setter Property="Padding" Value="{StaticResource DefaultHeaderPadding}"/>
+        <Setter Property="MinHeight" Value="{StaticResource MinHeaderHeight}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="BorderBrush" Value="{StaticResource LightBorderBrush}"/>
-        <Setter Property="Background" Value="{StaticResource StatusBarBackgroundBrush}"/>
+        <Setter Property="Background" Value="{StaticResource LightHeaderBrush}"/>
         <Style.Resources>
             <Style TargetType="TextBlock">
                 <Setter Property="Margin" Value="2,0"/>
