More scanner tool overhaul (4 tools ready)
Title version metadata update, submission document metadata update, title version export, and title version list creator

--- a/src/Panama/Resources/Dictionary/Value.xaml
+++ b/src/Panama/Resources/Dictionary/Value.xaml
@@ -27,6 +27,7 @@
 
     <Thickness x:Key="DefaultPadding">10</Thickness>
     <Thickness x:Key="DefaultHeaderPadding">4</Thickness>
+    <Thickness x:Key="TightPadding">5</Thickness>
     
     <sys:Boolean x:Key="True">True</sys:Boolean>
     <sys:Boolean x:Key="False">False</sys:Boolean>
