Implement basic of orphan find
Orphan find included in tools window.

--- a/src/Panama/Resources/Dictionary/ListBox.xaml
+++ b/src/Panama/Resources/Dictionary/ListBox.xaml
@@ -42,7 +42,7 @@
                             Foreground="{StaticResource DarkAlertForegroundBrush}"
                             Text="{Binding VersionRevision}"/>
                         
-                        <TextBlock Grid.Column="1" Text="{Binding File}"/>
+                        <TextBlock Grid.Column="1" Text="{Binding FileName}"/>
                     </Grid>
                 </DataTemplate>
             </Setter.Value>
