--- a/src/Panama/View/ToolOrphanView.xaml
+++ b/src/Panama/View/ToolOrphanView.xaml
@@ -23,7 +23,7 @@
         </Grid.ColumnDefinitions>
         
         <!-- Tool explanation text -->
-        <TextBlock Style="{StaticResource TextBlockMessage}" Text="{x:Static r:Strings.HeaderToolOperationOrphan}"/>
+        <!--<TextBlock Style="{StaticResource TextBlockMessage}" Text="{x:Static r:Strings.HeaderToolOperationOrphan}"/>-->
 
         <!-- Tool bar -->
         <ToolBarTray Grid.Row="1" Grid.ColumnSpan="2" Margin="0,5">
