--- a/src/Panama/Resources/Dictionary/TextBox.xaml
+++ b/src/Panama/Resources/Dictionary/TextBox.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib">
     
     <Style x:Key="TextBoxMultiStyle" TargetType="TextBox" BasedOn="{StaticResource DefaultTextBoxStyle}">
         <Setter Property="Margin" Value="{StaticResource DataEntryPanelDefaultControlMargin}"/>
@@ -13,6 +14,7 @@
     </Style>
 
     <Style x:Key="TextBoxMultiStretchStyle" TargetType="TextBox" BasedOn="{StaticResource TextBoxMultiStyle}">
+        <Setter Property="MaxHeight" Value="{x:Static sys:Double.PositiveInfinity}"/>
         <Setter Property="VerticalAlignment" Value="Stretch"/>
     </Style>
     
