--- a/src/Panama/View/Tools/ToolWindow.xaml
+++ b/src/Panama/View/Tools/ToolWindow.xaml
@@ -129,6 +129,9 @@
                     StatusText="{Binding Adapter.Status[4]}"
                     UpdatedText="{x:Static r:Strings.TextOrphans}"
                     NotFoundVisibility="Collapsed"
+                    PreviewVisibility="Visible"
+                    PreviewText="{Binding OrphanPreviewText}"
+                    SelectedUpdatedItem="{Binding SelectedOrphan}"
                     UpdatedItemsSource="{Binding Adapter.Updated[4]}"
                     Command="{Binding Commands[RunOrphan]}"/>                
                 
