--- a/src/Panama/View/Tools/PreviewPanel.xaml
+++ b/src/Panama/View/Tools/PreviewPanel.xaml
@@ -5,9 +5,9 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
-    xmlns:r="clr-namespace:Restless.Panama.Resources"
-    xmlns:cv="clr-namespace:Restless.Panama.Core"
-    xmlns:vw="clr-namespace:Restless.Panama.View"
+    xmlns:r="clr-namespace:Restless.Panama.Resources" 
+    xmlns:vw="clr-namespace:Restless.Panama.View" 
+    d:DataContext="{d:DesignInstance Type=vw:PreviewPanel}"
     mc:Ignorable="d"
     d:DesignHeight="300" d:DesignWidth="260"
     tk:Property.RowHeights="Auto,*"
