Update orphan finder
Include title root and enable user to specify both directory and file exclusions

--- a/src/Panama/View/Windows/SettingsWindow.xaml
+++ b/src/Panama/View/Windows/SettingsWindow.xaml
@@ -206,9 +206,12 @@
                         Path="{Binding Config.TextViewerFile}"
                         SelectCommand="{Binding Commands[SelectPath]}"/>                    
                     
-                    <TextBlock Text="{x:Static r:Strings.ConfigOrphanExclusion}"/>
-                    <TextBox Text="{Binding Config.OrphanExclusions}"/>
-                    
+                    <TextBlock Text="{x:Static r:Strings.ConfigOrphanDirectoryExclusion}"/>
+                    <TextBox Text="{Binding Config.OrphanDirectoryExclusions}"/>
+
+                    <TextBlock Text="{x:Static r:Strings.ConfigOrphanFileExclusion}"/>
+                    <TextBox Text="{Binding Config.OrphanFileExclusions}"/>
+
                 </StackPanel>
             </HeaderedContentControl>
             
